@@ -174,9 +174,10 @@ class ParserList(object):
 class HachoirParserList(ParserList):
     _instance = None
 
-    def __new__(cls):
+    @classmethod
+    def getInstance(cls):
         if cls._instance is None:
-            cls._instance = object.__new__(cls)
+            cls._instance = cls()
         return cls._instance
 
     def __init__(self):
