@@ -1,4 +1,4 @@
-__version__ = "1.2.1"
+__version__ = "1.2.2"
 PACKAGE = "hachoir-parser"
 WEBSITE = "http://hachoir.org/wiki/hachoir-parser"
 LICENSE = 'GNU GPL v2'
